# Simple2DPlatformShooter

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: animation.cpp  animation.hpp  guy.cpp  guy.hpp  main.cpp
